--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.logo-name2 {
+    color: #91C4F2;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 .App {
-  text-align: center;
+    width: 100lvw;
+    display: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contain {
+    display: flex;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-title {
+    font-size: 1.4rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input {
+    height: 2rem;
+    width: 21rem;
+    border-radius: 10px;
+    border: none
 }
 
-.App-link {
-  color: #61dafb;
+
+.input::placeholder {
+    border: none
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-icon {
+    width: 1.5rem;
+}
+
+.text-container{
+    width: 20rem;
+    height: 5rem;
+    padding: 1rem;
+ 
+}
+.recipe-card{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin: 0 auto;
+   height: 30rem;
+   width: 21rem;
+   border-radius: 1rem;
+   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  
+   
+}
+.recipe-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    justify-content: center;
+    padding-top: 8rem;
+    margin: 0 auto;
+    
+   
+}
+.meal{
+    font-weight: 700;
 }
