--- a/src/App.css
+++ b/src/App.css
@@ -1,75 +1,60 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .logo-name2 {
-    color: #91C4F2;
-    font-family: Arial, Helvetica, sans-serif;
+  color: #91C4F2;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .App {
-    width: 100lvw;
-    display: relative;
+  display: relative;
 }
 
 .contain {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .search-title {
-    font-size: 1.4rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.4rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.input {
-    height: 2rem;
-    width: 21rem;
-    border-radius: 10px;
-    border: none
+input {
+  border: 1px solid #f7f7f7;
+  padding: 10px;
+  font-size: 16px;
+
+}
+input:focus {
+  outline: none;
 }
 
-
-.input::placeholder {
-    border: none
-}
-
-.search-icon {
-    width: 1.5rem;
-}
-
-.text-container{
-    width: 20rem;
-    height: 5rem;
-    padding: 1rem;
+.form-control {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
  
 }
-.recipe-card{
-   display: flex;
-   flex-direction: column;
-   margin: 0 auto;
-   padding-top: .5rem;
-   height: 30rem;
-   width: 21rem;
-   border-radius: 1rem;
-   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  
-   
+
+
+
+.search-icon {
+  width: 1.5rem;
 }
-.recipe-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 3rem;
-    justify-content: center;
-    padding-top: 8rem;
-    margin: 0 auto;
-    
-   
+
+
+form {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
-.meal{
-    font-weight: 700;
-}
+
+
+
+
+
